--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/StatisticsWindow.xaml
@@ -40,7 +40,7 @@
             <TextBlock Grid.Row="4" Text="Total files transferred: "/>
             <TextBlock Grid.Row="5" Text="Total bytes transferred: "/>
             <TextBlock Grid.Row="6" Text="Total time spent with transfer: "/>
-            <TextBlock Grid.Row="7" Text="Overall usage time: "/>
+            <TextBlock Grid.Row="7" Text="Total usage time: "/>
             <TextBlock Grid.Row="8" Text="Application started: "/>
             <TextBlock Grid.Row="9" Text="Application crashed: "/>
 
@@ -51,7 +51,7 @@
             <TextBlock Grid.Column="1" Grid.Row="4" TextAlignment="Right" Text="{Binding TotalFilesTransferred}"/>
             <TextBlock Grid.Column="1" Grid.Row="5" TextAlignment="Right" Text="{Binding TotalBytesTransferred, Converter={StaticResource FileSizeConverter}}"/>
             <TextBlock Grid.Column="1" Grid.Row="6" TextAlignment="Right" Text="{Binding TotalTimeSpentWithTransfer, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}"/>
-            <TextBlock Grid.Column="1" Grid.Row="7" TextAlignment="Right" Text="{Binding OverallUsageTime, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="7" TextAlignment="Right" Text="{Binding TotalUsageTime, StringFormat={x:Static views:StatisticsWindow.TimeFormat}}"/>
             <TextBlock Grid.Column="1" Grid.Row="8" TextAlignment="Right" Text="{Binding ApplicationStarted}"/>
             <TextBlock Grid.Column="1" Grid.Row="9" TextAlignment="Right" Text="{Binding ApplicationCrashed}"/>
         </Grid>
