Title recognition, setting restore, upload append and other fixes Taskbar buttons (UNDONE)

--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/TransferProgressDialog.xaml
@@ -6,7 +6,19 @@
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
                        Width="450" WindowStartupLocation="CenterOwner">
     <primitives:DialogBase.TaskbarItemInfo>
-        <TaskbarItemInfo ProgressValue="{Binding TotalProgressDouble}" ProgressState="{Binding ProgressState}"/>
+        <TaskbarItemInfo ProgressValue="{Binding TotalProgressDouble}" ProgressState="{Binding ProgressState}">
+            <TaskbarItemInfo.ThumbButtonInfos>
+                <ThumbButtonInfoCollection>
+                    <ThumbButtonInfo Description="Pause" DismissWhenClicked="False" 
+                                     Command="{Binding PauseCommand}" CommandTarget="{Binding ElementName=PauseButton}" ImageSource="/Resources/pause.png"
+                                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"
+                                     IsEnabled="{Binding Path=TargetPane.IsResumeSupported}"/>
+                    <ThumbButtonInfo Description="Continue" DismissWhenClicked="False" 
+                                     Command="{Binding ContinueCommand}" CommandTarget="{Binding ElementName=ContinueButton}" ImageSource="/Resources/play.png"
+                                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}" />
+                </ThumbButtonInfoCollection>
+            </TaskbarItemInfo.ThumbButtonInfos>
+        </TaskbarItemInfo>
     </primitives:DialogBase.TaskbarItemInfo>
     <primitives:DialogBase.Title>
         <MultiBinding StringFormat="{x:Static dialogs:TransferProgressDialog.TitleFormat}">
@@ -78,10 +90,10 @@
         </DockPanel>
 
         <StackPanel Grid.Row="5" HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Width="75" Content="Pause" Command="{Binding PauseCommand}" Margin="0,0,5,0" 
+            <Button Width="75" Content="Pause" Command="{Binding PauseCommand}" Margin="0,0,5,0" x:Name="PauseButton"
                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}, ConverterParameter=True}"
                     IsEnabled="{Binding Path=TargetPane.IsResumeSupported}"/>
-            <Button Width="75" Content="Continue" Command="{Binding ContinueCommand}" Margin="0,0,5,0" 
+            <Button Width="75" Content="Continue" Command="{Binding ContinueCommand}" Margin="0,0,5,0" x:Name="ContinueButton"
                     Visibility="{Binding Path=IsPaused, Converter={StaticResource BoolToVis}}"/>
             <Button Width="75" Content="Abort" Click="CancelButtonClick" x:Name="Abort"/>
         </StackPanel>
