--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/AboutDialog.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/AboutDialog.xaml
@@ -2,6 +2,7 @@
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
+                       xmlns:controls="clr-namespace:Neurotoxin.Godspeed.Presentation.Controls;assembly=Neurotoxin.Godspeed.Presentation"
                        Width="400" WindowStartupLocation="CenterOwner">
     <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
@@ -9,7 +10,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Margin="5,0,0,15" TextWrapping="Wrap" x:Name="Description"/>
+        <controls:RichTextBox Grid.Row="0" Margin="5,0,0,15" x:Name="Description"/>
 
         <Button Grid.Row="1" Content="Close" Width="75" x:Name="Ok" Click="OkButtonClick"/>
 
