--- a/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ErrorMessage.xaml
+++ b/Neurotoxin.Godspeed/Neurotoxin.Godspeed.Shell/Views/Dialogs/ErrorMessage.xaml
@@ -2,7 +2,18 @@
                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                        xmlns:primitives="clr-namespace:Neurotoxin.Godspeed.Shell.Primitives"
-                       Width="720" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="Unhandled error occured">
+                       Width="520" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="Unhandled error occurred">
+    <primitives:DialogBase.Resources>
+        <Style TargetType="Expander">
+            <Setter Property="FontWeight" Value="Bold"></Setter>
+        </Style>
+        <DataTemplate x:Key="ExpanderTemplate">
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" 
+                          MaxHeight="300" Background="White" Padding="3" FontWeight="Normal">
+                <TextBlock Text="{Binding}"/>
+            </ScrollViewer>
+        </DataTemplate>
+    </primitives:DialogBase.Resources>
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -11,21 +22,15 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0" Margin="5,0,5,5" x:Name="Message" TextWrapping="Wrap" />
 
-        <Expander Grid.Row="1" Margin="5,0,5,5" x:Name="CallStack" Header="Show Stack Trace">
-            <Expander.ContentTemplate>
-                <DataTemplate>
-                    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                        <TextBlock Text="{Binding}"/>
-                    </ScrollViewer>
-                </DataTemplate>
-            </Expander.ContentTemplate>
-        </Expander>
+        <Expander Grid.Row="1" Margin="5,0,5,5" x:Name="Details" Header="Details:" ContentTemplate="{StaticResource ExpanderTemplate}"/>
+        <Expander Grid.Row="2" Margin="5,0,5,5" x:Name="FtpLog" Header="FTP Log:" ContentTemplate="{StaticResource ExpanderTemplate}"/>
 
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Content="Report" Margin="0,5,5,5" Click="ReportButtonClick" Width="100"/>
             <Button Content="OK" Margin="0,5,0,5" x:Name="Ok" Click="OkButtonClick" Width="80"/>
         </StackPanel>
